# IMU_nrf52840

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
boards/: xiao_ble.overlay
dashboard/: index.html  server.py
main/: CMakeLists.txt
main/inc/: IMU.h  batteryManager.h  bleDriver.h  config.h  peripherals.h
main/inc/IMU/: driver_mpu6500_basic.h  driver_mpu_6500_interface.h
main/src/: IMU.c  batteryManager.c  bleDriver.c  main.c  peripherals.c
main/src/IMU/: driver_mpu_6500_interface.c  mpu6500.c
